--- a/.gitignore
+++ b/.gitignore
@@ -659,3 +659,5 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,macos,python,latex,visualstudiocode,jupyternotebooks
+
+*/data/*
